--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ YOUR STYLES
 
 
 body {
-    background-image: url("");
+    background-image: url("http://www.techtapper.com/wp-content/uploads/2013/08/Cool-Backgrounds-Background-HD-Wallpaper.jpg");
 }
 
 
